--- a/syllabus.tex
+++ b/syllabus.tex
@@ -43,7 +43,7 @@ lectures and tutorials on best practices and projects to build experience.
 
 \begin{minipage}{0.5\textwidth}
   Prof. Alexander Nitz \\
-  Office hours TBA
+  Office hours: Monday 3-5 pm (or by appointment)
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
   \begin{flushright}
@@ -64,11 +64,12 @@ Students will be able to
 
 \subsection*{Meeting times}
 
-The scheduled class times are Tuesday and Thursday 2:00 - 3:20 PM in room 204. Since the class is not primarily lecture based, these times will be used as default times to schedule a number of different class types:
+The scheduled class times are Tuesday and Thursday 12:30 - 13:50 PM in room 208. These times will be used as default times to schedule a number of different class types:
 \begin{description}
-\item[Full-class discussion sessions] When introducing the course and new projects, we will meet all together to discuss the basics of what we will be doing.
+\item[Lectures and Discussions] When introducing the course, lectures on practices and concepts, and new projects.
 \item[Small group sessions] When collaborating on a project, I will schedule discussion sessions with individual groups to review progress and issues.
 \item[Open lab sessions] For all other class times, plan to be present, working on projects. This gives you quick access to the professor and other students to answer questions.
+
 \end{description}
 The schedule details for individual days will be determined on an as-needed basis.
 
@@ -76,10 +77,9 @@ The schedule details for individual days will be determined on an as-needed basi
 
 \begin{itemize}
 \item A computer capable of using python and the SciPy programming stack is required for this course.
-\item A device for online video and text communication is also required.
 \item No textbook is required for this course. Suggested online resources will be supplied as needed.
 \end{itemize}
-
+ 
 \section*{Grading}
 
 \begin{table}[h]
@@ -88,14 +88,14 @@ The schedule details for individual days will be determined on an as-needed basi
   \begin{tabular}{cr}
 	\toprule
     Four major projects & 20\% each \\
-    Pre-assignments & 10\% \\
+    assignments & 10\% \\
     Collaboration & 10\% \\
     \bottomrule
   \end{tabular}
 \end{center}
 \end{table}
 
-Throughout the term, pre-assignments will be used for class and project organization. These will be graded for completion. The first major project will be completed individually, but for the rest you will work in assigned groups. The collaboration grade will be assigned based on peer assessment at the end of the term.
+Throughout the term, assignments will be used for class and project organization. These will be graded for completion. The first major project will be completed individually, but for the rest you will work in assigned groups. The collaboration grade will be assigned based on peer assessment at the end of the term.
 
 \begin{table}[h]
   \caption{Letter grades}
@@ -120,21 +120,22 @@ Throughout the term, pre-assignments will be used for class and project organiza
 \newpage
 \section*{Course calendar}
 
-The following key dates are tentatively set for the semester, and may be adjusted based on progress in the course. Unlisted class dates will be scheduled as described in the section on meeting times, above.
+The following key dates are tentatively set for the semester, and may be adjusted based on progress in the course. Unlisted class dates will be scheduled as described in the section on meeting times, above. Projects may include topics related to ODEs, PDEs, monte-carlo methods, and markov chains.
 \begin{table}[h]
   \caption{Key dates}
 \begin{center}
   \begin{tabular}{lr}
     \toprule
-    2022/8/30 & First class and project 1 intro \\
-    2022/9/9 & Project 1 due \\
-    2022/9/13 & Project 2 intro: Ordinary differential equations \\
-    2022/10/7 & Project 2 due \\
-    2022/10/11 & Project 3 intro: PDEs and linear algebra \\
-    2022/11/4 & Project 3 due \\
-    2022/11/8 & Project 4 intro: Monte Carlo methods \\
-    2022/11/21-25 & Thanksgiving break \\
-    2022/12/8 & Last day of class and project 4 due \\
+    2023/8/29 & First class \\
+    2023/8/31 & Project 1 Intro \\
+    2023/9/9 & Project 1 due \\
+    2023/9/12 & Project 2 intro \\
+    2023/10/12 & Project 2 due \\
+    2023/10/12 & Project 3 intro \\
+    2023/11/7 & Project 3 due \\
+    2023/11/9 & Project 4 intro \\
+    2023/11/19-26 & Thanksgiving break \\
+    2023/12/12 & Last day of class and project 4 due \\
     \bottomrule
   \end{tabular}
 \end{center}
