--- a/syllabus.tex
+++ b/syllabus.tex
@@ -120,7 +120,7 @@ Throughout the term, assignments will be used for class and project organization
 \newpage
 \section*{Course calendar}
 
-The following key dates are tentatively set for the semester, and may be adjusted based on progress in the course. Unlisted class dates will be scheduled as described in the section on meeting times, above. Projects may include topics related to ODEs, PDEs, monte-carlo methods, and markov chains.
+The following key dates are tentatively set for the semester, and may be adjusted based on progress in the course. Unlisted class dates will be scheduled as described in the section on meeting times, above. Projects topics are subject to adjustment, but may include topics related to ODEs, PDEs, monte-carlo methods, and markov chains.
 \begin{table}[h]
   \caption{Key dates}
 \begin{center}
